FB refactoring